--- a/movieproject/package.json
+++ b/movieproject/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "movieproject",
+  "name": "projectmovie-castro-arron-miguel-bsit3a",
   "version": "0.1.0",
   "private": true,
+  "author": "Arron Miguel Castro",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "http-proxy-middleware": "^3.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -20,13 +21,13 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost/movieproject-api",
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
   },
+  "proxy": "http://localhost/movieproject-api",
   "browserslist": {
     "production": [
       ">0.2%",
